--- a/profile.css
+++ b/profile.css
@@ -1,9 +1,20 @@
 body {
-    background-color: rgb(164, 244, 244);
+    background-color: rgb(0, 0, 0);
+    color: white;
 }
 
 .whole-body {
     max-width: fit-content;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.intro {
+    padding: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: rgb(61, 19, 116);
+    border-radius: 25px;
 }
