--- a/profile.css
+++ b/profile.css
@@ -1,6 +1,6 @@
 body {
-    background-color: rgb(0, 0, 0);
-    color: white;
+    background-color: rgb(242, 213, 132);
+    color: rgb(0, 0, 0);
 }
 
 .whole-body {
@@ -15,6 +15,130 @@ body {
     padding: 5px;
     padding-left: 20px;
     padding-right: 20px;
-    background-color: rgb(61, 19, 116);
+    background-color: rgb(236, 213, 194);
     border-radius: 25px;
+    margin-bottom: 25px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.about-me {
+    background-color: rgb(236, 213, 194);
+    padding: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 25px;
+    line-height: 1.5;
+    margin-bottom: 25px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.interactive-container {
+    margin-bottom: 25px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.interactive {
+    border-radius: 50%;
+    padding-top: 125px;
+    padding-bottom: 125px;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
+.gaming {
+    background-color: rgb(236, 213, 194);
+    padding: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 25px;
+    line-height: 1.5;
+    margin-bottom: 25px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.socials {
+    margin-bottom: 100px;
+}
+
+.discord {
+    transition: opacity 0.15s, padding 0.5s, border-radius 0.5s;
+    border: none;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: rgb(75, 120, 233);
+    color: white;
+    border-radius: 5px;
+}
+
+.discord:hover {
+    opacity: 0.8;
+    cursor: pointer;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-radius: 25px;
+}
+
+.discord:active {
+    opacity: 0.6;
+}
+
+.instagram {
+    transition: opacity 0.15s, padding 0.5s, border-radius 0.5s;
+    border: none;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: rgb(204, 84, 231);
+    color: white;
+    border-radius: 5px;
+}
+
+.instagram:hover {
+    opacity: 0.8;
+    cursor: pointer;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-radius: 25px;
+}
+
+.instagram:active {
+    opacity: 0.6;
+}
+
+.github {
+    transition: opacity 0.15s, padding 0.5s, border-radius 0.5s;
+    border: none;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: rgb(10, 6, 66);
+    color: white;
+    border-radius: 5px;
+}
+
+.github:hover {
+    opacity: 0.8;
+    cursor: pointer;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-radius: 25px;
+}
+
+.github:active {
+    opacity: 0.6;
 }
